Add TechieHub HTML skill pages

--- a/logo.html
+++ b/logo.html
@@ -29,14 +29,14 @@
 
         <div class="skills-grid">
             <div class="skill-badge"><a href="about.html"></a>HTML</div>
-            <div class="skill-badge"><a href="about.css"></a>CSS</div>
-            <div class="skill-badge"><a href="about.javascript"></a>JavaScript</div>
-            <div class="skill-badge"><a href="about.python"></a>Python</div>
-            <div class="skill-badge"><a href="about.sql"></a>SQL</div>
-            <div class="skill-badge"><a href="about.React"></a>React</div>
-            <div class="skill-badge"><a href="about.java"></a>Java</div>
-            <div class="skill-badge"><a href="about.php"></a>php</div>
-            <div class="skill-badge"><a href="about.C#"></a>C#</div>
+            <div class="skill-badge"><a href="aboutcss.html"></a>CSS</div>
+            <div class="skill-badge"><a href="aboutjavascript.html"></a>JavaScript</div>
+            <div class="skill-badge"><a href="aboutpython.html"></a>Python</div>
+            <div class="skill-badge"><a href="aboutsql.html"></a>SQL</div>
+            <div class="skill-badge"><a href="aboutReact.html"></a>React</div>
+            <div class="skill-badge"><a href="aboutjava.html"></a>Java</div>
+            <div class="skill-badge"><a href="aboutphp.html"></a>php</div>
+            <div class="skill-badge"><a href="aboutC#.html"></a>C#</div>
         </div>
 
        <div class="cta-section">
