Initial commit: Add logo.html and styled skills section

--- a/about.html
+++ b/about.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><meta charset="UTF-8"><title>HTML</title></head>
+<head>
+  <meta charset="UTF-8">
+  <title>Learn HTML - TechieHub</title>
+  <link rel="stylesheet" href="skills.css">
+</head>
 <body>
-    <h1>HTML (HyperText Markup Language)</h1>
-    <p>HTML is the standard language used to create and structure webpages. It forms the skeleton of any web page and allows developers to define elements such as headings, paragraphs, images, links, lists, and much more.</p>
-    <p>HTML5 introduced new elements such as <code>&lt;section&gt;</code>, <code>&lt;article&gt;</code>, <code>&lt;header&gt;</code>, and <code>&lt;footer&gt;</code> to better structure web content.</p>
+  <div class="skill-page">
+    <h1>🌐 HTML</h1>
+    <p>HTML (HyperText Markup Language) is the foundation of all websites. It structures content using simple tags.</p>
+    <ul>
+      <li>🔹 Easy to learn and beginner-friendly</li>
+      <li>🔹 Works hand-in-hand with CSS and JavaScript</li>
+      <li>🔹 The first step to becoming a web developer</li>
+    </ul>
+    <blockquote>"Every great website starts with HTML. Start simple, build big."</blockquote>
+    <a href="logo.html" class="back-link">⬅️ Back to Skills</a>
+  </div>
 </body>
 </html>
