--- a/aboutReact.html
+++ b/aboutReact.html
@@ -1,9 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><meta charset="UTF-8"><title>React</title></head>
+<head>
+  <meta charset="UTF-8">
+  <title>React.js - TechieHub</title>
+  <link rel="stylesheet" href="skills.css">
+</head>
 <body>
-    <h1>React.js</h1>
-    <p>React is a JavaScript library for building user interfaces. Developed by Facebook, it's known for its component-based architecture and virtual DOM.</p>
-    <p>React makes it easier to create dynamic and responsive single-page applications (SPAs).</p>
+  <div class="skill-page">
+    <h1>⚛️ React.js</h1>
+
+    <p>
+      React is a powerful <strong>JavaScript library</strong> created by Facebook to build stunning and efficient user interfaces.
+    </p>
+
+    <p>
+      It's widely used in top-tier apps like Facebook, Instagram, WhatsApp Web, and Netflix!
+    </p>
+
+    <ul>
+      <li>🔁 Uses reusable <strong>components</strong></li>
+      <li>⚡ Renders updates with a <strong>Virtual DOM</strong> for blazing speed</li>
+      <li>💡 Great for creating <strong>Single Page Applications (SPAs)</strong></li>
+    </ul>
+
+    <blockquote>
+      "With React, you don't just build apps — you craft experiences."
+    </blockquote>
+
+    <a href="logo.html" class="back-link">⬅️ Back to Skills</a>
+  </div>
 </body>
 </html>
