--- a/aboutcss.html
+++ b/aboutcss.html
@@ -1,9 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><meta charset="UTF-8"><title>CSS</title></head>
+<head>
+  <meta charset="UTF-8">
+  <title>Learn CSS - TechieHub</title>
+  <link rel="stylesheet" href="skills.css">
+</head>
 <body>
-    <h1>CSS (Cascading Style Sheets)</h1>
-    <p>CSS is a stylesheet language used to describe the look and formatting of a document written in HTML. It controls colors, layouts, fonts, spacing, and responsiveness.</p>
-    <p>CSS3 introduced features like Flexbox, Grid, animations, transitions, and media queries to build responsive and attractive websites.</p>
+  <div class="skill-page">
+    <h1>🎨 CSS (Cascading Style Sheets)</h1>
+
+    <p>
+      CSS is the magic behind beautiful websites. It controls how things look — colors, fonts, layouts, spacing, and animations.
+    </p>
+
+    <p>
+      With CSS, you can transform plain HTML into eye-catching, responsive designs. Whether you're styling buttons or building complex grid layouts, CSS gives you full control.
+    </p>
+
+    <ul>
+      <li>🌈 Customize the look of any element</li>
+      <li>📱 Make sites responsive with media queries</li>
+      <li>💫 Add smooth transitions and animations</li>
+      <li>🧠 Master Flexbox & Grid for powerful layouts</li>
+    </ul>
+
+    <blockquote>
+      "Design is not just what it looks like — it's how it works. Learn CSS, and bring your ideas to life!"
+    </blockquote>
+
+    <a href="logo.html" class="back-link">⬅️ Back to Skills</a>
+  </div>
 </body>
 </html>
