--- a/aboutjava.html
+++ b/aboutjava.html
@@ -1,9 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><meta charset="UTF-8"><title>Java</title></head>
+<head>
+  <meta charset="UTF-8">
+  <title>Java - TechieHub</title>
+  <link rel="stylesheet" href="skills.css">
+</head>
 <body>
-    <h1>Java</h1>
-    <p>Java is a versatile, object-oriented programming language commonly used in enterprise applications, mobile apps (especially Android), and backend systems.</p>
-    <p>It runs on the Java Virtual Machine (JVM), making it platform-independent.</p>
+  <div class="skill-page">
+    <h1>☕ Java</h1>
+
+    <p>
+      Java is a powerful, object-oriented programming language known for its <strong>portability</strong>, <strong>security</strong>, and <strong>performance</strong>.
+    </p>
+
+    <p>
+      It’s widely used in:
+      <ul>
+        <li>📱 Android app development</li>
+        <li>🏢 Enterprise-level backend systems</li>
+        <li>🌐 Web servers and cloud-based applications</li>
+      </ul>
+    </p>
+
+    <p>
+      Java runs on the <strong>Java Virtual Machine (JVM)</strong>, meaning you can write code once and run it anywhere!
+    </p>
+
+    <blockquote>
+      "Java isn't just a language — it's a career path. Master it, and you're ready for real-world software development!"
+    </blockquote>
+
+    <a href="logo.html" class="back-link">⬅️ Back to Skills</a>
+  </div>
 </body>
 </html>
