--- a/aboutjavascript.html
+++ b/aboutjavascript.html
@@ -1,9 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><meta charset="UTF-8"><title>JavaScript</title></head>
+<head>
+  <meta charset="UTF-8">
+  <title>JavaScript - TechieHub</title>
+  <link rel="stylesheet" href="skills.css">
+</head>
 <body>
-    <h1>JavaScript</h1>
-    <p>JavaScript is a programming language used to make web pages interactive. It allows you to update content, control multimedia, animate images, and much more.</p>
-    <p>Modern JavaScript (ES6+) includes features like arrow functions, async/await, modules, classes, and promises.</p>
+  <div class="skill-page">
+    <h1>✨ JavaScript</h1>
+
+    <p>
+      JavaScript is the <strong>brain of the web</strong> — it brings your web pages to life by making them interactive and dynamic!
+    </p>
+
+    <p>
+      With JavaScript, you can:
+      <ul>
+        <li>🖱️ Respond to user actions</li>
+        <li>🎬 Animate elements and control multimedia</li>
+        <li>🔄 Fetch data in real-time using APIs</li>
+        <li>🛒 Build modern apps like online stores, chat apps, and games</li>
+      </ul>
+    </p>
+
+    <p>
+      Modern JavaScript (ES6+) includes powerful features like:
+      <ul>
+        <li>⚡ Arrow Functions</li>
+        <li>⏳ Async/Await for better asynchronous code</li>
+        <li>📦 Modules & Classes for clean structure</li>
+        <li>🤝 Promises for handling complex flows</li>
+      </ul>
+    </p>
+
+    <blockquote>
+      "Learning JavaScript is like learning magic — suddenly, your websites do things!"
+    </blockquote>
+
+    <a href="logo.html" class="back-link">⬅️ Back to Skills</a>
+  </div>
 </body>
 </html>
