--- a/aboutphp.html
+++ b/aboutphp.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><meta charset="UTF-8"><title>PHP</title></head>
+<head>
+  <meta charset="UTF-8">
+  <title>PHP - TechieHub</title>
+  <link rel="stylesheet" href="skills.css">
+</head>
 <body>
-    <h1>PHP</h1>
-    <p>PHP is a server-side scripting language designed for web development. It is widely used to build dynamic websites and web applications.</p>
-    <p>Popular platforms like WordPress, Joomla, and Drupal are built with PHP.</p>
-    <p>Popular social media sites such as facebook are built using PHP</p>
+  <div class="skill-page">
+    <h1>🚀 PHP (Hypertext Preprocessor)</h1>
+
+    <p>
+      PHP is a <strong>powerful server-side scripting language</strong> made for web development. It's one of the most widely-used tools for building dynamic and interactive websites.
+    </p>
+
+    <p>
+      With PHP, you can:
+      <ul>
+        <li>🛠️ Build forms, forums, and user accounts</li>
+        <li>📂 Connect to databases like MySQL</li>
+        <li>⚙️ Create dynamic pages and e-commerce systems</li>
+        <li>🌍 Power massive platforms like <strong>WordPress, Joomla, and Drupal</strong></li>
+        <li>📘 Even <strong>Facebook</strong> started with PHP!</li>
+      </ul>
+    </p>
+
+    <blockquote>
+      "PHP is the heartbeat of many websites you use every day. Learn it, and you’ll be coding like a pro!"
+    </blockquote>
+
+    <a href="index.html" class="back-link">⬅️ Back to Skills</a>
+  </div>
 </body>
 </html>
