--- a/aboutsql.html
+++ b/aboutsql.html
@@ -1,9 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><meta charset="UTF-8"><title>SQL</title></head>
+<head>
+  <meta charset="UTF-8">
+  <title>SQL - TechieHub</title>
+  <link rel="stylesheet" href="skills.css">
+</head>
 <body>
-    <h1>SQL (Structured Query Language)</h1>
-    <p>SQL is used to manage and query data in relational databases. It enables operations such as inserting, updating, deleting, and selecting data from databases.</p>
-    <p>Popular RDBMSs include MySQL, PostgreSQL, SQLite, and Microsoft SQL Server.</p>
+  <div class="skill-page">
+    <h1>🗄️ SQL (Structured Query Language)</h1>
+
+    <p>
+      <strong>SQL</strong> is the language of data. It's what powers the **world’s biggest apps** and **databases** behind social media, banking, healthcare, e-commerce, and more.
+    </p>
+
+    <p>
+      With SQL, you can <strong>insert</strong>, <strong>query</strong>, <strong>update</strong>, and <strong>analyze</strong> data like a pro. It’s the first step toward becoming a true data wizard!
+    </p>
+
+    <ul>
+      <li>💾 Works with <strong>MySQL, PostgreSQL, SQLite,</strong> and <strong>SQL Server</strong></li>
+      <li>🔍 Used by data analysts, software developers, and DBAs globally</li>
+      <li>📊 Critical for data-driven decision making in every tech company</li>
+    </ul>
+
+    <blockquote>
+      “Master SQL, and you control the power of data.”
+    </blockquote>
+
+    <a href="logo.html" class="back-link">⬅️ Back to Skills</a>
+  </div>
 </body>
 </html>
