--- a/aboutpython.html
+++ b/aboutpython.html
@@ -1,9 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><meta charset="UTF-8"><title>Python</title></head>
+<head>
+  <meta charset="UTF-8">
+  <title>Python - TechieHub</title>
+  <link rel="stylesheet" href="skills.css">
+</head>
 <body>
-    <h1>Python</h1>
-    <p>Python is a high-level, interpreted programming language known for its readability and broad library support. It is widely used in web development, automation, data science, artificial intelligence, and more.</p>
-    <p>Popular frameworks include Django, Flask, and FastAPI.</p>
+  <div class="skill-page">
+    <h1>🐍 Python</h1>
+
+    <p>
+      Python is a <strong>powerful, high-level programming language</strong> celebrated for its simple syntax and wide range of applications.
+    </p>
+
+    <p>
+      Whether you're a beginner or a pro, Python is the go-to language for:
+      <ul>
+        <li>🌐 Web Development (Django, Flask, FastAPI)</li>
+        <li>🤖 Artificial Intelligence & Machine Learning</li>
+        <li>📊 Data Science & Visualization</li>
+        <li>🧪 Scientific Computing</li>
+        <li>🔁 Automation and Scripting</li>
+      </ul>
+    </p>
+
+    <blockquote>
+      "Learning Python is like unlocking the master key to modern technology — one line at a time."
+    </blockquote>
+
+    <a href="logo.html" class="back-link">⬅️ Back to Skills</a>
+  </div>
 </body>
 </html>
