--- a/logo.html
+++ b/logo.html
@@ -28,15 +28,15 @@
         </div>
 
         <div class="skills-grid">
-            <div class="skill-badge"><a href="about.html"></a>HTML</div>
-            <div class="skill-badge"><a href="aboutcss.html"></a>CSS</div>
-            <div class="skill-badge"><a href="aboutjavascript.html"></a>JavaScript</div>
-            <div class="skill-badge"><a href="aboutpython.html"></a>Python</div>
-            <div class="skill-badge"><a href="aboutsql.html"></a>SQL</div>
-            <div class="skill-badge"><a href="aboutReact.html"></a>React</div>
-            <div class="skill-badge"><a href="aboutjava.html"></a>Java</div>
-            <div class="skill-badge"><a href="aboutphp.html"></a>php</div>
-            <div class="skill-badge"><a href="aboutC#.html"></a>C#</div>
+            <div class="skill-badge"><a href="about.html">HTML</a></div>
+            <div class="skill-badge"><a href="aboutcss.html">CSS</a></div>
+            <div class="skill-badge"><a href="aboutjavascript.html">JavaScript</a></div>
+            <div class="skill-badge"><a href="aboutpython.html">Python</a></div>
+            <div class="skill-badge"><a href="aboutsql.html">SQL</a></div>
+            <div class="skill-badge"><a href="aboutReact.html">React</a></div>
+            <div class="skill-badge"><a href="aboutjava.html">Java</a></div>
+            <div class="skill-badge"><a href="aboutphp.html">php</a></div>
+            <div class="skill-badge"><a href="aboutsharp.html">C#</a></div>
         </div>
 
        <div class="cta-section">
