Initial commit: Add logo.html and styled skills section

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
       <li>🔹 The first step to becoming a web developer</li>
     </ul>
     <blockquote>"Every great website starts with HTML. Start simple, build big."</blockquote>
-    <a href="logo.html" class="back-link">⬅️ Back to Skills</a>
+    <a href="index.html" class="back-link">⬅️ Back to Skills</a>
   </div>
 </body>
 </html>
