--- a/aboutReact.html
+++ b/aboutReact.html
@@ -27,7 +27,7 @@
       "With React, you don't just build apps — you craft experiences."
     </blockquote>
 
-    <a href="logo.html" class="back-link">⬅️ Back to Skills</a>
+    <a href="index.html" class="back-link">⬅️ Back to Skills</a>
   </div>
 </body>
 </html>
