--- a/aboutcss.html
+++ b/aboutcss.html
@@ -28,7 +28,7 @@
       "Design is not just what it looks like — it's how it works. Learn CSS, and bring your ideas to life!"
     </blockquote>
 
-    <a href="logo.html" class="back-link">⬅️ Back to Skills</a>
+    <a href="index.html" class="back-link">⬅️ Back to Skills</a>
   </div>
 </body>
 </html>
