--- a/aboutjava.html
+++ b/aboutjava.html
@@ -30,7 +30,7 @@
       "Java isn't just a language — it's a career path. Master it, and you're ready for real-world software development!"
     </blockquote>
 
-    <a href="logo.html" class="back-link">⬅️ Back to Skills</a>
+    <a href="index.html" class="back-link">⬅️ Back to Skills</a>
   </div>
 </body>
 </html>
