--- a/aboutjavascript.html
+++ b/aboutjavascript.html
@@ -37,7 +37,7 @@
       "Learning JavaScript is like learning magic — suddenly, your websites do things!"
     </blockquote>
 
-    <a href="logo.html" class="back-link">⬅️ Back to Skills</a>
+    <a href="index.html" class="back-link">⬅️ Back to Skills</a>
   </div>
 </body>
 </html>
