--- a/aboutsharp.html
+++ b/aboutsharp.html
@@ -28,7 +28,7 @@
       “C# developers don't just build software—they build worlds.”
     </blockquote>
 
-    <a href="logo.html" class="back-link">⬅️ Back to Skills</a>
+    <a href="index.html" class="back-link">⬅️ Back to Skills</a>
   </div>
 </body>
 </html>
