--- a/aboutsql.html
+++ b/aboutsql.html
@@ -27,7 +27,7 @@
       “Master SQL, and you control the power of data.”
     </blockquote>
 
-    <a href="logo.html" class="back-link">⬅️ Back to Skills</a>
+    <a href="index.html" class="back-link">⬅️ Back to Skills</a>
   </div>
 </body>
 </html>
